# rufeed

./: README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  exam.atom  feeds.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  config.rs  lib.rs  main.rs  parser.rs
src-tauri/src/commands/: feed.rs  feeds.rs
src/components/: EmptyState.tsx  ErrorToast.tsx  LoadingView.tsx
src/components/article/: ArticleView.tsx  AuthorTag.tsx
src/components/feed/: FeedItemCard.tsx  FeedItemsList.tsx
src/components/sidebar/: AddFeedInput.tsx  FeedListItem.tsx  SidebarContent.tsx
src/hooks/: useFeeds.ts
src/types/: index.ts
src/utils/: index.ts
