[package]
name = "rufeed"
version = "0.3.0"
description = "A Tauri App"
authors = ["Ahmed Nagi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rufeed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.13.3"
feed-rs = "2.3.1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
scraper = "0.22"
cached = { version = "0.54", features = ["async"] }
